--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
   <footer class="footer">
     <ul class="header-nav">
       <li class="header-nav-item header-nav-item_parent">
+        <a href="./" class="header-nav-item_parent-link">Home</a>
         <a href="" class="header-nav-item_parent-link">About</a>
         <ul class="header-subnav">
           <li class="header-subnav-item"><a href="./">About/History</a></li>
