--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <li class="header-nav-item"><a href="./" class="white-transparent-btn button-like-link header-btn-link">Grant Application</a></li>
     </ul>
     <h4 class="footer-title">James Banks Foundation</h4>
-    <a href="" class="footer-map-link" target="_blank">444 W. Lake Street, Suite 1700, Chicago, IL 60606</a><br>
+    <a href="https://goo.gl/maps/WhwDrybB2NR2/" class="footer-map-link" target="_blank">444 W. Lake Street, Suite 1700, Chicago, IL 60606</a><br>
     <a href="tel:18005555555" class="footer-phone-link">1-800-555-5555</a>
     <div class="footer-bottom-links">
       <a href="">Privacy Policy</a>
