--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <header class="header">
       <div class="section-wrapper">
         <a href="./" class="header-logo"><img src="./images/logo.svg" alt="header-logo" class="header-logo-img"></a>
+        <div id="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <ul class="header-nav">
           <li class="header-nav-item header-nav-item_parent">
             <a href="" class="header-nav-item_parent-link">About</a>
@@ -56,27 +61,33 @@
   <section class="news-section" id="scroll">
     <div class="section-wrapper">
       <h2 class="section-title">News</h2>
-      <div class="three-col">
-        <div class="three-col-item">
-          <div class="news-img" style="background-image: url('./images/news-img-1.jpg')"></div>
-          <h4 class="news-title">Title</h4>
+      <div class="three-col mobile-slider">
+        <div class="three-col-item ">
+          <a href="" class="link-wrapper">
+            <div class="news-img" style="background-image: url('./images/news-img-1.jpg')"></div>
+            <h4 class="news-title">Title</h4>
+          </a>
           <span class="news-date">10/03/2018</span>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
-          <a href="" class="button-like-link accent-btn">Read More</a>
+          <a href="" class="button-like-link accent-btn media-link">Read More</a>
         </div>
         <div class="three-col-item">
-          <div class="news-img" style="background-image: url('./images/news-img-2.jpg')"></div>
-          <h4 class="news-title">Title</h4>
+          <a href="" class="link-wrapper">
+            <div class="news-img" style="background-image: url('./images/news-img-2.jpg')"></div>
+            <h4 class="news-title">Title</h4>
+          </a>
           <span class="news-date">10/03/2018</span>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
-          <a href="" class="button-like-link accent-btn">Read More</a>
+          <a href="" class="button-like-link accent-btn media-link">Read More</a>
         </div>
         <div class="three-col-item">
-          <div class="news-img" style="background-image: url('./images/news-img-3.jpg')"></div>
-          <h4 class="news-title">Title</h4>
+          <a href="" class="link-wrapper">
+            <div class="news-img" style="background-image: url('./images/news-img-3.jpg')"></div>
+            <h4 class="news-title">Title</h4>
+          </a>
           <span class="news-date">10/03/2018</span>
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore.</p>
-          <a href="" class="button-like-link accent-btn">Read More</a>
+          <a href="" class="button-like-link accent-btn media-link">Read More</a>
         </div>
       </div>
     </div>
@@ -84,38 +95,46 @@
   <section class="media-section">
     <div class="section-wrapper">
       <h2 class="section-title">Media</h2>
-      <div class="three-col">
+      <div class="three-col mobile-slider">
         <div class="three-col-item">
-          <div class="media-img" style="background-image: url('./images/media-img-1.jpg')"></div>
-          <h4 class="media-title">Rietvlei Dehorning Programme</h4>
+          <a href="" class="link-wrapper">
+            <div class="media-img" style="background-image: url('./images/media-img-1.jpg')"></div>
+            <h4 class="media-title">Rietvlei Dehorning Programme</h4>
+          </a>
           <p>ERP dehorned 12 rhino in the Rietlvei Nature Reserve in December 2017. The reserve is run by the local municipality…</p>
-          <a href="" class="button-like-link accent-btn">See More</a>
+          <a href="" class="button-like-link accent-btn media-link">See More</a>
         </div>
         <div class="three-col-item">
-          <div class="media-img" style="background-image: url('./images/media-img-2.jpg')"></div>
-          <h4 class="media-title">Dinokeng Bull Collaring</h4>
+          <a href="" class="link-wrapper">
+            <div class="media-img" style="background-image: url('./images/media-img-2.jpg')"></div>
+            <h4 class="media-title">Dinokeng Bull Collaring</h4>
+          </a>
           <p>In December 2016, ERP received an emergency call to assist the Dinokeng Game Reserve with a 911 Elephant call when one of…</p>
-          <a href="" class="button-like-link accent-btn">See More</a>
+          <a href="" class="button-like-link accent-btn media-link">See More</a>
         </div>
         <div class="three-col-item">
-          <div class="media-img" style="background-image: url('./images/media-img-3.jpg')"></div>
-          <h4 class="media-title">Dinokeng Elephant Monitoring</h4>
+          <a href="" class="link-wrapper">
+            <div class="media-img" style="background-image: url('./images/media-img-3.jpg')"></div>
+            <h4 class="media-title">Dinokeng Elephant Monitoring</h4>
+          </a>
           <p>After collaring the bulls, ERP decided to provide two elephant monitors to look after them until they could be translocated…</p>
-          <a href="" class="button-like-link accent-btn">See More</a>
+          <a href="" class="button-like-link accent-btn media-link">See More</a>
         </div>
       </div>
     </div>
   </section>
   <section class="help-section">
-    <hr>
-    <h4>Need Help?</h4>
-    <p>Fill out our Grant Application and let’s help some animals together!</p>
-    <a href="" class="button-like-link accent-btn">Grant Application</a>
+    <div class="section-wrapper">
+      <hr>
+      <h4>Need Help?</h4>
+      <p>Fill out our Grant Application and let’s help some animals together!</p>
+      <a href="" class="button-like-link accent-btn">Grant Application</a>
+    </div>
   </section>
   <footer class="footer">
     <ul class="header-nav">
+      <li class="header-nav-item"><a href="./">Home</a></li>
       <li class="header-nav-item header-nav-item_parent">
-        <a href="./" class="header-nav-item_parent-link">Home</a>
         <a href="" class="header-nav-item_parent-link">About</a>
         <ul class="header-subnav">
           <li class="header-subnav-item"><a href="./">About/History</a></li>
